gccida/g3/bitmap_copy
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:744:12: error: expected expression
*( _OWORD *)&to->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:744:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&to->first = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:794:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:794:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:812:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)object_base, 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:813:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)object_base); 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:814:12: error: expected expression
*( _OWORD *)object_base = v7; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/bitmap.c:814:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)object_base = v7; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_copy/src/obj/bitmap.o] Error 1
